Fix mobile spacing

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ a {
   color: inherit;
 }
 
-h1, h2 {
+h1, h2, p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 100;
 }
